fix: made left and right padding proportional to the screen size
this made it so ultrawides wont have extremely stretched content

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .section-one {
     background-color: #1f2937;
-    padding: 0 200px;
+    padding: 0 16vw;
     display: flex;
     flex-direction: column;
 }
